[tool.poetry]
name = "cardio"
version = "0.1.0"
description = ""
authors = ["ymyke <ymyke@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asciimatics = "^1.14"
openai = "^0.27"  # Used by the card generator
platformdirs = "^3.5.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.19.2"
pytest = "^7.2.0"
pdbpp = "^0.10.3"
hypothesis = "^6.61.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
